@@ -13,6 +13,7 @@ Date:
 ----------------------------------
 Changes/New Features:
 
+CAY-2587 SQLServer Limit Offset translation
 CAY-2677 Custom Class Generation Templates for Embeddables and DataMaps
 CAY-2689 ServerRuntime API: missing some variants of the performInTransaction() method
 CAY-2692 Add entity lifecycle callbacks via annotated methods
